--- a/src/style.scss
+++ b/src/style.scss
@@ -202,3 +202,9 @@ section {
   text-align: center;
   color: $black-magenta;
 }
+
+.git {
+  font-size: 20px;
+  font-weight: 300;
+  color: $black-magenta;
+}
